--- a/index.html
+++ b/index.html
@@ -619,27 +619,26 @@ people involved in the information flow.
 
 A [=person=]'s <dfn data-lt="autonomous">autonomy</dfn> is their ability to make decisions of their own personal will,
 without undue influence from other [=actors=]. People have limited intellectual resources and
-time with which to weigh decisions, and by necessity rely on shortcuts when making
-decisions. This makes their preferences, including privacy preferences, malleable and susceptible to
-manipulation ([[?Privacy-Behavior]], [[?Digital-Market-Manipulation]]). A [=person=]'s [=autonomy=] is enhanced by a
-system or device when that system offers a shortcut that aligns more with what that [=person=] would
-have decided given arbitrary amounts of time and relatively unlimited intellectual ability;
-and [=autonomy=] is decreased when a similar shortcut goes against decisions made under such
-ideal conditions.
+time with which to weigh decisions, and have to rely on shortcuts when making decisions. This makes it possible
+to manipulate their preferences, including privacy preferences ([[?Privacy-Behavior]], [[?Digital-Market-Manipulation]]).
+A [=person=]'s [=autonomy=] is improved by a system when that system offers a shortcut that is closer to what
+that [=person=] would have decided given unlimited time and intellectual ability; and [=autonomy=] is decreased
+when a similar shortcut goes against decisions made under these ideal conditions.
 
 Affordances and interactions that decrease [=autonomy=] are known as <dfn data-lt="dark pattern|dark patterns">deceptive patterns</dfn> (or dark patterns).
 A [=deceptive pattern=] does not have to be intentional ([[?Dark-Patterns]], [[?Dark-Pattern-Dark]]).
-When building something that may impact [=autonomy=], it is important to review the product from
+When building something that may impact people's [=autonomy=], it is important to review the product from
 multiple independent perspectives to make sure that it does not introduce [=deceptive patterns=]
 that may not be obvious to its creator.
 
 Given the large volume of potential [=data=]-related decisions in today's data economy,
-complete informational self-determination is impossible. This fact, however, should not be
-confused with the idea that privacy is dead. Studies show that [=people=] remain concerned over how
-their [=data=] is [=processed=], feeling powerless and like they have lost agency
-([[?Privacy-Concerned]]). Careful design of our technological infrastructure can ensure that
-people's [=autonomy=] with respect to their own [=data=] is enhanced through [=appropriate=]
-defaults and choice architectures.
+it is impossible for people to have detailed control over how their data is processed.
+This fact should not be confused with the idea that privacy is dead. Studies show that
+[=people=] remain concerned over how their [=data=] is [=processed=], that they feel powerless
+and have lost agency ([[?Privacy-Concerned]]). If we design out technological infrastructure
+carefully, we can give people greater [=autonomy=] with respect to their own [=data=]. This is
+done by setting [=appropriate=], privacy-protective defaults and user-friendly choice
+architectures.
 
 ### Opt-in, Consent, Opt-out, Global Controls {#opt-in-out}
 
