--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ the victim.
 
 When an [=actor=] can collect [=data=] about a [=person=] and process it automatically, and that
 [=person=] cannot automatically protect their [=data=] and prevent its processing ([=automation asymmetry=])
-this creates an imbalance of power that favors that [=actor=] and decreases the [=persons=]'s agency.
+this creates an imbalance of power that favors that [=actor=] and decreases the [=person=]'s agency.
 
 It is important to keep in mind that not all people are equal in how they can resist
 an imbalance of power: some [=people=] are more [=vulnerable=] and therefore in greater
@@ -696,32 +696,31 @@ shows that they make it hard for [=people=] to exercise their rights.
 
 ### Privacy Labour {#privacy-labour}
 
-<dfn data-lt="privacy labor|labour|labor">Privacy labour</dfn> is the practice of having a [=person=] carry out
+<dfn data-lt="privacy labor|labour|labor">Privacy labour</dfn> is the practice of having a [=person=] do
 the work of ensuring [=data processing=] of which they are the subject or recipient is
 [=appropriate=], instead of putting the responsibility on the [=actors=] who are doing the processing.
 Data systems that are based on asking [=people=] for their [=consent=] tend to increase
 [=privacy labour=].
 
-More generally, implementations of [=privacy=] are often dominated by self-governing approaches that
-offload [=labour=] to [=people=]. This is notably true of the regimes descended from the
-<dfn data-lt="FIPs">Fair Information Practices</dfn> ([=FIPs=]), a loose set of principles initially
-elaborated in the 1970s in support of individual [=autonomy=] in the face of growing concerns with databases. The
-[=FIPs=] generally assume that there is sufficiently little [=data processing=] taking place that any
-[=person=] will be able to carry out sufficient diligence to enable [=autonomy=] in their
-decision-making. Since they offload the [=privacy labour=]
-to people and assume perfect, unlimited [=autonomy=], the [=FIPs=] do not forbid specific
-types of [=data processing=] but only place them under different procedural requirements.
-This approach is no longer appropriate.
+More generally, implementations of [=privacy=] often offload [=labour=] to [=people=]. This is
+notably true of the regimes descended from the <dfn data-lt="FIPs">Fair Information Practices</dfn>
+([=FIPs=]), a loose set of principles initially elaborated in the 1970s in support of individual
+[=autonomy=] in the face of growing concerns with databases. The [=FIPs=] generally assume that
+there is sufficiently little [=data processing=] taking place that any [=person=] will be able to
+carry out sufficient diligence to be [=autonomous=] in their decision-making. Since they offload
+the [=privacy labour=] to people and assume perfect, unlimited [=autonomy=], the [=FIPs=] do not
+forbid specific types of [=data processing=] but only place them under different procedural
+requirements. This approach is no longer [=appropriate=].
 
-One notable issue with procedural, self-governing approaches to privacy is that they tend to have the same
+One notable issue with procedural approaches to privacy is that they tend to have the same
 requirements in situations where people find themselves in a significant asymmetry of
 power with another [=actor=] — for instance a [=person=] using an essential service provided by a
 monopolistic platform — and those where a person and the other [=actor=] are very much on equal
 footing, or even where the [=person=] may have greater power, as is the case with small
-businesses operating in a competitive environment. They further do not consider cases in
+businesses operating in a competitive environment. They also do not consider cases in
 which one [=actor=] may coerce other [=actors=] into facilitating its [=inappropriate=]
-practices, as is often the case with dominant players in advertising or
-in content aggregation ([[?Consent-Lackeys]], [[?CAT]]).
+practices, as is often the case with dominant players in advertising or in content aggregation
+([[?Consent-Lackeys]], [[?CAT]]).
 
 Reference to the [=FIPs=] survives to this day. They are often referenced as "<i>transparency
 and choice</i>", which, in today's digital environment, is often an indication that
