potential small group privacy examples, per #251 (#289)

--- a/index.html
+++ b/index.html
@@ -784,6 +784,13 @@ is the fitness app Strava that did not reveal individual behaviour or legal iden
 maps of popular running routes. In doing so, it revealed secret US bases around which military
 personnel took frequent runs ([[?Strava-Debacle]], [[?Strava-Reveal-Military]]).
 
+People's privacy interests may also be affected when information about a small group of people is
+processed, even if no individualized data is exposed. For example, browsing activity of the students
+in a classroom may be sensitive even if their teacher doesn't learn exactly which student accessed a
+particular resource about a health issue. Targeting presentation of information to a small group may
+also be inappropriate: for example, targeting messages to people who visited a particular clinic or
+are empaneled on a particular jury may be invasive even without uniquely individual data.
+
 When [=people=] do not know that they are members of a group, when they cannot easily find other
 members of the group so as to advocate for their rights together, or when they cannot easily
 understand why they are being categorised into a given group, their ability to protect themselves
