Clarify sentence as per live discussion in call

--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@ of their [=opt-out=] to their [=user agent=], which helps rectify [=automation a
 Under this model, a [=global opt-out=] signal should not be understood as a decision that a
 [=person=] made a while ago when they flipped a setting or chose to use a specific
 [=user agent=] but rather as a preference that they have chosen to automatically reaffirm with
-every interaction.
+every interaction with the site.
 
 One implementation strategy for [=opt-outs=] and other <a href="#data-rights">data rights</a> is
 to assign [=people=] stable [=identifiers=] and to maintain a central registry to map these
