--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@ of their <a data-link-type="dfn|abstract-op" href="#dfn-opt-out" class="internal
 <p>Under this model, a <a data-link-type="dfn|abstract-op" href="#dfn-global-opt-out" class="internalDFN" id="ref-for-dfn-global-opt-out-4">global opt-out</a> signal should not be understood as a decision that a
 <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-16">person</a> made a while ago when they flipped a setting or chose to use a specific
 <a data-link-type="dfn|abstract-op" data-type="dfn" href="https://infra.spec.whatwg.org/#user-agent">user agent</a> but rather as a preference that they have chosen to automatically reaffirm with
-every interaction.</p>
+every interaction with the site.</p>
 <p>One implementation strategy for <a data-link-type="dfn|abstract-op" href="#dfn-opt-out" class="internalDFN" id="ref-for-dfn-opt-out-4">opt-outs</a> and other <a href="#data-rights">data rights</a> is
 to assign <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-17">people</a> stable <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-1">identifiers</a> and to maintain a central registry to map these
 <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-2">identifiers</a> to <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-18">people</a>'s preferences. <a data-link-type="dfn|abstract-op" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-11">Actors</a> that wish to process a given person's
@@ -1620,8 +1620,6 @@ a person, consider at least these factors:</p>
 <cite><a data-matched-text="[[[fingerprinting-guidance]]]" href="https://www.w3.org/TR/fingerprinting-guidance/">Mitigating Browser Fingerprinting in Web Specifications</a></cite>);</li>
 <li>whether it discloses substantial (including intimate details or inferences)
 information about the person using the system or other people;</li>
-<li>whether it can be revoked (as in determining whether a permission is
-necessary);</li>
 <li>whether it enables other threats, like intrusion.</li>
 </ul>
 </section><section id="data-rights-0"><div class="header-wrapper"><h3 id="data-rights"><bdi class="secno">2.5 </bdi>Data Rights</h3><a class="self-link" href="#data-rights" aria-label="Permalink for Section 2.5"></a></div><div class="practice principle"><a class="marker self-link" href="#respect-data-rights"><bdi lang="en">Principle</bdi></a>: <span class="practicelab" id="respect-data-rights">
