Remove ", notably against timing or k-anonymity attacks." text, fixes #285
fixes issue #285

--- a/index.html
+++ b/index.html
@@ -1429,8 +1429,7 @@ For instance, if the [=controlled de-identified data=] is <em>only</em> being pr
 [=actor=], typical controls include making sure that the [=identifiers=] used in the data are unique
 to that dataset, that any person (e.g. an employee of the [=actor=]) with access to the [=data=] is
 barred (e.g. based on legal terms) from sharing the [=data=] further, and that technical measures
-exist to prevent re-identification or the joining of different data sets involving this [=data=],
-notably against timing or k-anonymity attacks.
+exist to prevent re-identification or the joining of different data sets involving this [=data=].
 
 In general, the goal is to ensure that [=controlled de-identified data=] is used in a manner that
 provides a viable degree of oversight and accountability such that technical and procedural means to
@@ -1456,8 +1455,7 @@ practices would include making sure that:
   from sharing it further;
 
 * technical measures exist to prevent re-identification or the joining of
-  different data sets involving this [=data=], notably against timing or
-  k-anonymity attacks; and
+  different data sets involving this [=data=]; and
 
 * there exist contractual terms between the [=first party=] and [=third party=]
   describing the limited [=purpose=] for which the data is being shared.
