Add identifiers to sensitive data list

--- a/index.html
+++ b/index.html
@@ -1313,6 +1313,7 @@ Many pieces of information about someone could cause privacy harms if disclosed.
 For example:
 
 * Their location.
+* Any [=identifiers=] associated with them.
 * Video or audio from the their camera or microphone.
 * The content of certain files on their filesystem.
 * Financial data.
