Remove ", notably against timing or k-anonymity attacks." text, fixes #285 (#337)
SHA: e3596798c88c95d150ca5b45a2f964c5897b3ac2
Reason: push, by torgo

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1705,8 +1705,7 @@ For instance, if the <a data-link-type="dfn|abstract-op" href="#dfn-controlled-d
 <a data-link-type="dfn|abstract-op" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-24">actor</a>, typical controls include making sure that the <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-6">identifiers</a> used in the data are unique
 to that dataset, that any person (e.g. an employee of the <a data-link-type="dfn|abstract-op" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-25">actor</a>) with access to the <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-27">data</a> is
 barred (e.g. based on legal terms) from sharing the <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-28">data</a> further, and that technical measures
-exist to prevent re-identification or the joining of different data sets involving this <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-29">data</a>,
-notably against timing or k-anonymity attacks.</p>
+exist to prevent re-identification or the joining of different data sets involving this <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-29">data</a>.</p>
 <p>In general, the goal is to ensure that <a data-link-type="dfn|abstract-op" href="#dfn-controlled-de-identified-data" class="internalDFN" id="ref-for-dfn-controlled-de-identified-data-3">controlled de-identified data</a> is used in a manner that
 provides a viable degree of oversight and accountability such that technical and procedural means to
 guarantee the maintenance of pseudonymity are preserved.</p>
@@ -1728,8 +1727,7 @@ with any data other than that obtained through interactions with the <a data-lin
 from sharing it further;</p>
 </li>
 <li><p>technical measures exist to prevent re-identification or the joining of
-different data sets involving this <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-33">data</a>, notably against timing or
-k-anonymity attacks; and</p>
+different data sets involving this <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-33">data</a>; and</p>
 </li>
 <li><p>there exist contractual terms between the <a data-link-type="dfn|abstract-op" href="#dfn-first-party-0" class="internalDFN" id="ref-for-dfn-first-party-0-4">first party</a> and <a data-link-type="dfn|abstract-op" href="#dfn-third-parties" class="internalDFN" id="ref-for-dfn-third-parties-6">third party</a>
 describing the limited <a data-link-type="dfn|abstract-op" href="#dfn-purpose" class="internalDFN" id="ref-for-dfn-purpose-7">purpose</a> for which the data is being shared.</p>
