Cite RFC6772, noting that low-granularity information can still reveal precise information and some of the conditions for why less emphatic about the sensitivity difference

--- a/index.html
+++ b/index.html
@@ -1327,8 +1327,11 @@ also can be an indicator of belonging to an ethnic minority. Precise location
 information can be extremely sensitive (because it's identifying, because it
 allows for in-person intrusions, because it can reveal detailed information
 about a person's life) but it might also be public and not sensitive at all, or
-it might be low-enough granularity that it is much less sensitive for many
-people.
+it might be low-enough granularity that it is less sensitive for many
+people. Reducing granularity of location information may not hide precise location information from
+an [=actor=], however, particularly if location information is repeatedly requested over time or if
+the [=actor=] has other relevant information about the [=person=] [<a
+data-cite="RFC6772#section-13.5">RFC6772</a>].
 
 When considering whether a class of information is likely to be sensitive to
 a person, consider at least these factors:
