fix broken definition link (present participles of verbs not auto recognized)

--- a/index.html
+++ b/index.html
@@ -1800,7 +1800,7 @@ to [=people=] in accessible forms.
 
 <div class="practice">
   <span class="practicelab" id="transparency-distinguishable">
-    Mechanisms that can be used for [=recognizing=] [=people=] should be designed so that
+    Mechanisms that can be used for [=recognize|recognizing=] [=people=] should be designed so that
     their operation is visible and distinguishable, to [=user agents=], researchers and regulators.
   </span>
 </div>
