--- a/index.html
+++ b/index.html
@@ -1328,7 +1328,7 @@ information can be extremely sensitive (because it's identifying, because it
 allows for in-person intrusions, because it can reveal detailed information
 about a person's life) but it might also be public and not sensitive at all, or
 it might be low-enough granularity that it is less sensitive for many
-people. Beware that reducing granularity of location information may not hide precise location information from
+people. Beware that reducing granularity of location information might not hide precise location information from
 an [=actor=], particularly if location information is repeatedly requested over time or if
 the [=actor=] has other relevant information about the [=person=] [<a
 data-cite="RFC6772#section-13.5">RFC6772</a>].
