remove reference to removed section

--- a/index.html
+++ b/index.html
@@ -2152,8 +2152,7 @@ different [=contexts=],
 
 A privacy harm occurs if a [=person=] reasonably expects that they'll be using
 a different [=identity=] for different visits to a single site, but the site
-[=recognizes=] them anyway. This harm can be accomplished through a
-variety of means detailed in [[[#recognition-methods]]].
+[=recognizes=] them anyway.
 
 Note that these categories overlap: [=cross-site recognition=] is usually
 [=cross-context recognition=] (and always [=recognizes=] across [=partitions=]); and
