Apply suggestions from code review
Co-authored-by: Daniel Appelquist <dan@torgo.com>
Co-authored-by: Amy Guy <amy@rhiaro.co.uk>

--- a/index.html
+++ b/index.html
@@ -1744,7 +1744,14 @@ Link this to [[[#guardians]]].
   <p>
     <span class="practicelab" id="abuse-reporting">
       Systems that allow for communicating on the Web must provide an
-      effective capability to report abuse. [=User agents=] and [=sites=] must
+      effective capability to report abuse. 
+        </span>
+  </p>
+</div>
+<div class="practice">
+  <p>
+    <span class="practicelab" id="abuse-protection">
+      [=User agents=] and [=sites=] must
       take steps to protect their users from abusive behaviour, and abuse
       mitigation must be considered when designing web platform features.
     </span>
@@ -1768,7 +1775,7 @@ Disclosure of location information can be used to intrude on a
 person's physical safety or space.
 
 Reporting mechanisms are mitigations, but may not prevent harassment, particularly in cases where
-hosts or intermediaries are supportive of or complicit in the abuse.
+hosts, moderators, or other intermediaries are supportive of or complicit in the abuse.
 
 Effective reporting is likely to require:
 
