--- a/index.html
+++ b/index.html
@@ -1738,7 +1738,7 @@ appropriately.
 Link this to [[[#guardians]]].
 </aside>
 
-## Protecting users from abusive behaviour
+## Protecting web users from abusive behaviour
 
 <div class="practice">
   <p>
