--- a/index.html
+++ b/index.html
@@ -1854,10 +1854,11 @@ more accountable. Examples of mitigations include:
 <div class="practice">
 <p>
   <span class="practicelab" id="principle-vulnerability">
-[=User agents=] and [=sites=] should not penalize users who have chosen
-stronger privacy protections, as doing so may put vulnerable people at risk.
-If disabling some features or functionality affects user experience, it should
-degrade gracefully.
+[=User agents=] and [=sites=] should continue working if a user chooses
+stronger privacy protections, to help to protect vulnerable people.
+Specifications, implementations, and sites should allow for graceful
+degradation of features which may be incompatible with stronger
+privacy protections.
   </span>
 </p>
 </div>
