--- a/index.html
+++ b/index.html
@@ -1461,7 +1461,7 @@ people than it would have been through other methods.
     System designers
     should not assume that particular information is or is not sensitive.
     Whether information is considered sensitive can vary depending on a
-    [=person=]'s circumstances, the [=context=] of an interaction, and can
+    [=person=]'s circumstances and the [=context=] of an interaction, and it can
     change over time.
   </span>
 </p>
