Remove <dfn>s that aren't used anymore.

--- a/index.html
+++ b/index.html
@@ -1606,7 +1606,7 @@ helps different users to react appropriately.
   <p>
     <span class="practicelab" id="abuse-reporting">
       Systems that allow for communicating on the Web must provide an
-      effective capability to report abuse. 
+      effective capability to report abuse.
         </span>
   </p>
 </div>
@@ -2232,7 +2232,7 @@ data-cite="RFC6973#section-5.2.4">RFC6973§5.2.4</a>.
     <a
 data-cite="RFC6973#section-5.2.5">RFC6973§5.2.5</a>.
 
-<dt><dfn>Identification</dfn>
+<dt>Identification
 
 <dd>Identification is the linking of information to a particular individual, even if the information
 isn't linked to that individual's real-world identity (e.g. their legal name, address, government ID
@@ -2257,7 +2257,7 @@ data-cite="RFC6973#section-5.1.4">RFC6973§5.1.4</a>.
 <dd>The inference, evaluation, or prediction of an individual's attributes, interests, or
 behaviours.</dd>
 
-<dt><dfn>Secondary Use</dfn>
+<dt>Secondary Use
 
 <dd> Secondary use is the use of collected information about an individual without
     the individual’s consent for a purpose different from that for which the
